        IFAST for quality less than 60 when encoding

2011-11-20  Carsten Haitzler (The Rasterman)

        * TGA loader gets fixed alpha decode - real life tga's have
        proper alpha values. also reduce false positive tga file
        detection

2011-11-24  Carsten Haitzler (The Rasterman)

        * Fix repeat event inheritance from parent smart just like
        pass events are inherited. This was inconsistent.

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release

2011-12-07  Carsten Haitzler (The Rasterman)

        * Fix build if gcc too old - if immintrin.h doesn't exist,
        don't enable SSE3.

2011-12-08  Tom Hacohen (TAsn)

	* Textblock markup: Support self closing format tags, i.e <br/>.
	You should use <br/> and not <br>. The latter still works but it's use
	is discouraged.
	* Textblock: Added evas_textblock_text_markup_to_utf8.
	This lets you convert textblock markup to plain text.
	This converts formats and everything correctly.

2011-12-12  Carsten Haitzler (The Rasterman)

        * Fix rounding error in map clip bounds calculation

2011-12-12  Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_cursor_word_start/end.
	Those functions let you jump to the start/end of the word under the
	cursor.

2011-12-13  Carsten Haitzler (The Rasterman)

        * Fix grab count negative values if you do weird combinations of
        press and release with multiple fingers or multiple mouse
        buttons.

2011-12-14  Cedric BAIL

	* Use Eina_File when loading bmp, ico, pmaps and wbmp files.
	* Fix potential race condition in wbmp loader code.

2011-12-14  Tom Hacohen (TAsn)

	* Textblock: Made "br" and "tab" default tags for newline and tab.
	* Textblock: Added "b" and "i" as default tags that can be overridden
	by style, and added the infra to support this.
	* Textblock: Added evas_textblock_text_utf8_to_markup
        
2011-12-16  Carsten Haitzler (The Rasterman)

        * Add new api to set and get default event flags.
